[gd_scene load_steps=4 format=3 uid="uid://bewx345mdrjkl"]

[ext_resource type="Script" path="res://scenes/UI/characters/character_select_screen/character_select_screen.gd" id="1_6ygua"]
[ext_resource type="PackedScene" uid="uid://dtodgpoqsjj8s" path="res://scenes/UI/characters/character_select_screen/UI/CharacterSelectUI.tscn" id="2_jg0uw"]
[ext_resource type="PackedScene" uid="uid://b5vx7mnmf36g2" path="res://scenes/UI/characters/character_select_screen/3d_scene/CharacterSelect3D.tscn" id="3_xuvnp"]

[node name="CharacterSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ygua")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CharacterSelectUI" parent="CanvasLayer" instance=ExtResource("2_jg0uw")]
unique_name_in_owner = true

[node name="CharacterSelect3d" parent="." instance=ExtResource("3_xuvnp")]
unique_name_in_owner = true
